--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: flake8
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install flake8
     - name: Analysing the code with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
